--- a/.github/workflows/homeassistant.yml
+++ b/.github/workflows/homeassistant.yml
@@ -7,13 +7,14 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   ha_test:
     name: Home Assistant Check
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.8]
     runs-on: ubuntu-latest
     steps:
     - name: "Get the repository content"
