Fine tuned triggers and name of test action

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -1,5 +1,12 @@
-on: push
-name: on push
+name: Automated Tests
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+  workflow_dispatch:
+
 jobs:
   gitHubActionForPytest:
     name: GitHub Action for pytest
