--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: v3.1.0
     hooks:
       - id: check-json
-        stages: [manual]
+        stages: [commit, manual]
       - id: requirements-txt-fixer
         stages: [manual]
       - id: check-ast
