Corrected compatibility issues:
- removed loop keyword in async_timeout call in api function
- changed git access method in make setup to https
- added .DS_Store to .gitignore
- corrected click dependency for black check

--- a/.github/pre-commit-config.yaml
+++ b/.github/pre-commit-config.yaml
@@ -8,8 +8,8 @@ repos:
           - "--py37-plus"
 
   - repo: https://github.com/psf/black
-    rev: 19.10b0
-    hooks:
+     rev: 22.3.1
+     hooks:
       - id: black
         stages: [manual]
         args:
